# CHort

./: pyproject.toml
Main/: settings.py  urls.py
students/: models.py  serializers.py  views.py
students/migrations/: 0001_initial.py
